@@ -1,0 +1,7 @@
+<?php
+/* This file defines the constants for the module in English */
+define("_MODULE_ADMINISTRATOR_TOOLS","Administrator tools");
+define("_MODULE_ADMINISTRATOR_TOOLS_NEWLOGIN", "New login name");
+define("_MODULE_ADMINISTRATOR_TOOLS_SELECTUSERTOCHANGELOGINFOR", "Select user to change login for");
+define("_MODULE_CANCELLATIONS_CHANGELOGIN", "Change login");
+?>
