@@ -1,0 +1,10 @@
+<?xml version="1.0" ?>
+<module>
+	<title>Administrator tools</title>
+	<author>Periklis Venakis</author>
+	<date>2010 08 30</date>
+	<version>1.0</version>
+	<description>This module is a collection of administrator tools</description>
+	<className>module_administrator_tools</className>
+	<requires>3.6.6</requires>
+</module>
